--- a/hm-dianping/pom.xml
+++ b/hm-dianping/pom.xml
@@ -17,7 +17,7 @@
     <properties>
         <java.version>17</java.version>
         <!-- 统一管理依赖版本 -->
-        <redisson.version>3.23.4</redisson.version>
+        <redisson.version>3.17.7</redisson.version>
         <mysql-connector.version>8.0.33</mysql-connector.version>
         <mybatis-plus.version>3.5.7</mybatis-plus.version>
         <hutool.version>5.8.38</hutool.version>
@@ -92,6 +92,11 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>${hutool.version}</version>
+        </dependency>
+        <!-- 可选：JSON处理 -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
 
 
